--- a/consultancy-firm-profile/thebombayconsultancy/src/vars.css
+++ b/consultancy-firm-profile/thebombayconsultancy/src/vars.css
@@ -1,8 +1,8 @@
 :root{
     /*Colors*/
     --color-text: #333333;
-    --color-primary: #00539C;
-    --color-secondary: #FFC20E;
+    --color-primary: #023C6C;
+    --color-secondary: #66AC4C;
     --color-dark: #002D62;
     --color-bg:#F5F5F5;
     /* Fonts */
