--- a/consultancy-firm-profile/thebombayconsultancy/src/index.css
+++ b/consultancy-firm-profile/thebombayconsultancy/src/index.css
@@ -1,8 +1,14 @@
 /* Styling affected universally for each and every element on website */
+
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap');
+
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: "Outfit", Arial, Helvetica, sans-serif;
-  scroll-behavior: smooth; /* Smooth scroll for anchor links */
+    font-family: 'Lato', Helvetica, Arial, sans-serif;
+  
 } 
+html{
+  scroll-behavior: smooth; /* Smooth scroll for anchor links */
+}
