Add updates for 11/09/24

--- a/consultancy-firm-profile/thebombayconsultancy/src/components/Career/Career.module.css
+++ b/consultancy-firm-profile/thebombayconsultancy/src/components/Career/Career.module.css
@@ -1,62 +1,1 @@
-.careerSectionWrapper {
-    padding: 40px;
-    background-color: #f9f9f9;
-  }
-  
-  .careerSection {
-    max-width: 600px;
-    margin: 0 auto;
-    padding: 20px;
-    background-color: #fff;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  }
-  
-  .sectionHeading {
-    text-align: center;
-    margin-bottom: 20px;
-    font-size: 24px;
-    font-weight: bold;
-    color: #333;
-  }
-  
-  .inputField {
-    display: block;
-    width: 100%;
-    margin-bottom: 15px;
-    padding: 10px;
-    font-size: 16px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-  }
-  
-  .fileInput {
-    display: block;
-    width: 100%;
-    margin-bottom: 15px;
-    font-size: 16px;
-    padding: 10px;
-  }
-  
-  .submitButton {
-    width: 100%;
-    padding: 10px;
-    background-color: #007bff;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    font-size: 16px;
-    cursor: pointer;
-  }
-  
-  .submitButton:hover {
-    background-color: #0056b3;
-  }
-  
-  .submissionMessage {
-    text-align: center;
-    margin-top: 15px;
-    font-size: 16px;
-    color: green;
-  }
-  
+@import '../../vars.css';
