--- a/consultancy-firm-profile/thebombayconsultancy/src/components/Navbar/Navbar.module.css
+++ b/consultancy-firm-profile/thebombayconsultancy/src/components/Navbar/Navbar.module.css
@@ -125,7 +125,7 @@
         flex-direction: column;
         align-items: center;
         width: 100%;
-        padding: 24px 0;
+        padding: 0 0;
         background-color: var(--color-bg);
         transition: max-height 0.3s ease-in-out;
     }
