--- a/consultancy-firm-profile/thebombayconsultancy/src/components/Navbar/Navbar.module.css
+++ b/consultancy-firm-profile/thebombayconsultancy/src/components/Navbar/Navbar.module.css
@@ -8,7 +8,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 20px 10%;
+    padding: 5px 10%;
     z-index: 1000;
     border-bottom: 2px solid #ddd;
     transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
@@ -88,7 +88,10 @@
 @media screen and (max-width: 900px) {
     .navbar {
         flex-direction: column;
-        padding: 10px 5%;
+      padding-bottom: 80%;
+        padding-bottom: 100px;
+        padding-left: 5%;
+        padding-right: 5%;
     }
 
     .menu {
