--- a/consultancy-firm-profile/thebombayconsultancy/src/components/Service/Service.module.css
+++ b/consultancy-firm-profile/thebombayconsultancy/src/components/Service/Service.module.css
@@ -12,7 +12,7 @@
     /* Title styling */
     font-size: 2rem;
     font-weight: 700;
-    color: #333333;
+    color: var(--color-dark);
     margin-bottom: 20px;
   }
   
