--- a/consultancy-firm-profile/thebombayconsultancy/src/components/Navbar/Navbar.module.css
+++ b/consultancy-firm-profile/thebombayconsultancy/src/components/Navbar/Navbar.module.css
@@ -105,15 +105,17 @@
         font-size: 0;
         color: var(--color-primary);
         background: var(--color-bg);
-        border: 2px solid #ddd;
-        border-radius: 8%;
-        padding: 5px;
+        border: 1px solid #ddd;
+        border-radius: 3px;
+        padding: 2px;
         transition: transform 0.3s ease, box-shadow 0.3s ease;
         position: fixed;
         top: 20px;
         right: 20px;
         z-index: 1001;
+        transition: transform 0.6s ease, box-shadow 0.6s ease, background-color 0.6s ease;
     }
+    
     
 
     .menuBtn:hover {
@@ -126,9 +128,12 @@
         flex-direction: column;
         align-items: center;
         width: 100%;
-        padding: 0 0;
+        padding: 0;
         background-color: var(--color-bg);
-        transition: max-height 0.3s ease-in-out;
+        max-height: 0; /* Collapse height */
+        overflow: hidden; /* Hide overflow */
+        opacity: 0; /* Make transparent */
+        transition: max-height cubic-bezier(0.55, 0.055, 0.675, 0.19) cubic-bezier(0.25, 0.8, 0.25, 1), opacity 1.2s ease; /* Smoother transition */
     }
 
     .menuOpen {
@@ -136,7 +141,12 @@
         flex-direction: column;
         align-items: center;
         z-index: 1;
-        max-height: 100vh;
+        max-height: 500px;
+        opacity: 1; /* Make visible */
+    }
+    
+    .menuBtn.active {
+        transform: rotate(90deg);
     }
 
     .menuItems a {
